--- a/Day_1_Product-Card/product-card.html
+++ b/Day_1_Product-Card/product-card.html
@@ -5,9 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Day 1 Product Card</title>
-    <link href='https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css' rel='stylesheet'>
-    <link rel="stylesheet" href="./day1.css">
+    <title>Product cart</title>
+    <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
+    <link rel="stylesheet" href="./product-card.css">
+
 </head>
 
 <body>
@@ -18,34 +19,34 @@
         <div class="card__cart">
             <i class='bx bx-cart'></i>
         </div>
+
         <div class="card__img">
-            <img src="./Nike Zoom KD 12.png" alt="">
+            <img src="./Nike Zoom KD 12.png" alt="Nike Zoom KD 12">
         </div>
-        <div class="card__name">
-            <h3>Nike Zoom KD 12</h3>
+        <div class="card__title">
+            Nike Zoom KD 12
         </div>
         <div class="card__price">
-            <h3>$99</h3>
+            $100
         </div>
         <div class="card__size">
-            <p>Size: </p>
+            <h3>Size: </h3>
             <span>6</span>
             <span>7</span>
             <span>8</span>
             <span>9</span>
         </div>
         <div class="card__color">
-            <p>Color</p>
-            <span class="card--color__green"></span>
-            <span class="card--color__red"></span>
-            <span class="card--color__black"></span>
+            <h3>Color: </h3>
+            <span class="red"></span>
+            <span class="blue"></span>
+            <span class="green"></span>
         </div>
-        <div class="card__action">
-            <button class="buy">Buy now</button>
-            <button class="add__cart">Add cart</button>
+        <div class="card__button">
+            <button class="buy--now">Buy now</button>
+            <button class="add--cart">Add to cart</button>
         </div>
     </div>
-
 </body>
 
 </html>
